# excise

./: .gitignore  LAUNCH.md  LICENSE  README.md  pyproject.toml
.github/: release-notes-v0.1.0.md  release-notes-v0.2.0.md
.github/workflows/: test.yml
examples/: arithmetic.py  breadth_json.py  breadth_smollm.py  function_calling.py
paper/: excise.tex  excise_anonymous.tex  make_figures.py  make_readme_charts.py  refs.bib
src/excise/: __init__.py  arch.py  cli.py  config.py  data.py  export.py  extractor.py  gates.py  hooks.py  probes.py  teacher.py
tests/: test_smoke.py  test_units.py
vast_test/: fc_v02.py  joint_extraction.py  joint_extraction_fc.py  joint_extraction_v2.py  mem_probe.py  results.json  results_ce0.json  results_fc4b.json  results_mlponly.json  results_s42.json  results_s43.json  results_s44.json  results_slice42.json  run_battery.sh  v01_baseline_arith.py  v02_validation.py
vast_test/library_runs/json_extraction/: config.json  frontier.json  gates.npz  mask_floor.npz  receipts.json
vast_test/library_runs/smollm_arithmetic/: config.json  frontier.json  gates.npz  mask_floor.npz  receipts.json
vast_test/library_runs/v02/arith_v01_baseline/: config.json  frontier.json  receipts.json  summary.json
vast_test/library_runs/v02/arith_v02_deep_s42/: config.json  frontier.json  receipts.json  summary.json
vast_test/library_runs/v02/arith_v02_long_s42/: config.json  frontier.json  receipts.json  summary.json
vast_test/library_runs/v02/arith_v02_long_s43/: config.json  frontier.json  (+2 more)
vast_test/logs/v20_failed/: gates_s42.npz  results_s42.json
(+19 files in other folders)
